test suite for nod module

--- a/liquidwar6/src/lib/sys/Makefile.in
+++ b/liquidwar6/src/lib/sys/Makefile.in
@@ -88,7 +88,7 @@ am__libsys_la_SOURCES_DIST = sys-arg.c sys-assoc.c sys-bazooka.c \
 	sys-options.c sys-path.c sys-print.c sys-progress.c \
 	sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-sort.c \
 	sys-spinlock.c sys-str.c sys-test.c sys-thread.c sys-time.c \
-	sys-vthread.c sys-testandsetx86.s sys-macosx.m
+	sys-url.c sys-vthread.c sys-testandsetx86.s sys-macosx.m
 @LW6_X86_TRUE@am__objects_1 = sys-testandsetx86.lo
 @LW6_MAC_OS_X_TRUE@am__objects_2 = sys-macosx.lo
 am_libsys_la_OBJECTS = sys-arg.lo sys-assoc.lo sys-bazooka.lo \
@@ -100,8 +100,8 @@ am_libsys_la_OBJECTS = sys-arg.lo sys-assoc.lo sys-bazooka.lo \
 	sys-nop.lo sys-options.lo sys-path.lo sys-print.lo \
 	sys-progress.lo sys-random.lo sys-sdl.lo sys-serial.lo \
 	sys-shape.lo sys-sort.lo sys-spinlock.lo sys-str.lo \
-	sys-test.lo sys-thread.lo sys-time.lo sys-vthread.lo \
-	$(am__objects_1) $(am__objects_2)
+	sys-test.lo sys-thread.lo sys-time.lo sys-url.lo \
+	sys-vthread.lo $(am__objects_1) $(am__objects_2)
 libsys_la_OBJECTS = $(am_libsys_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libsysdir)"
 PROGRAMS = $(libexec_PROGRAMS)
@@ -367,7 +367,7 @@ AM_LDFLAGS = @LW6_LDFLAGS@ @LW6_GTK_ENABLE_LDFLAGS@ -lm
 @LW6_MAC_OS_X_FALSE@OBJC_EXTRA_FILES = sys-macosx.m
 @LW6_MAC_OS_X_TRUE@OBJC_EXTRA_FILES = 
 noinst_LTLIBRARIES = libsys.la
-libsys_la_SOURCES = sys-arg.c sys-assoc.c sys-bazooka.c sys-build.c sys-checksum.c sys-color.c sys-convert.c sys-debug.c sys-dump.c sys-env.c sys-exec.c sys-file.c sys-global.c sys-profiler.c sys-hash.c sys-hexa.c sys-history.c sys-i18n.c sys-id.c sys-keyword.c sys-list.c sys-log.c sys-math.c sys-mem.c sys-mutex.c sys-nop.c sys-options.c sys-path.c sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-sort.c sys-spinlock.c sys-str.c sys-test.c sys-thread.c sys-time.c sys-vthread.c $(X86_SRC_FILES) $(OBJC_SRC_FILES)
+libsys_la_SOURCES = sys-arg.c sys-assoc.c sys-bazooka.c sys-build.c sys-checksum.c sys-color.c sys-convert.c sys-debug.c sys-dump.c sys-env.c sys-exec.c sys-file.c sys-global.c sys-profiler.c sys-hash.c sys-hexa.c sys-history.c sys-i18n.c sys-id.c sys-keyword.c sys-list.c sys-log.c sys-math.c sys-mem.c sys-mutex.c sys-nop.c sys-options.c sys-path.c sys-print.c sys-progress.c sys-random.c sys-sdl.c sys-serial.c sys-shape.c sys-sort.c sys-spinlock.c sys-str.c sys-test.c sys-thread.c sys-time.c sys-url.c sys-vthread.c $(X86_SRC_FILES) $(OBJC_SRC_FILES)
 libsysdir = $(includedir)/@PACKAGE_TARNAME@/sys
 libsys_HEADERS = sys.h sys-gettext.h
 @FULLSTATIC_FALSE@liquidwar6sys_test_SOURCES = sys-testmain.c
@@ -515,6 +515,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-testmain.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-thread.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-time.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-url.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sys-vthread.Plo@am__quote@
 
 .c.o:
