Fixed make distcheck target (using const.texi.in.in).

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -671,7 +671,7 @@ AC_CONFIG_FILES([Makefile
           po/Makefile.in
           doc/Makefile
           doc/liquidwar6.man
-          doc/const.texi
+          doc/const.texi.in
           doc/coverage/Makefile
           doc/global/Makefile
           doc/cyclo/Makefile
