Removed version in AM_INIT_AUTOMAKE call.

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -26,7 +26,7 @@ AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([1.11])
+AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER([config.h]) 
 AC_PROG_CC
 AC_PROG_OBJC
