--- a/liquidwar6/doc/Makefile.gdoc
+++ b/liquidwar6/doc/Makefile.gdoc
@@ -48,7 +48,7 @@ $(srcdir)/net-gdoc.texi: ../src/lib/net/net-address.c ../src/lib/net/net-const.c
 $(srcdir)/nod-gdoc.texi: ../src/lib/nod/nod-constinfo.c ../src/lib/nod/nod-dyninfo.c ../src/lib/nod/nod.h ../src/lib/nod/nod-info.c ../src/lib/nod/nod-internal.h ../src/lib/nod/nod-test.c ../src/lib/nod/nod-testmain.c
 	echo gdoc nod && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/nod-gdoc.texi
 
-$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
+$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-oob.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
 	echo gdoc p2p && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/p2p-gdoc.texi
 
 $(srcdir)/pil-gdoc.texi: ../src/lib/pil/pil-bench.c ../src/lib/pil/pil-command.c ../src/lib/pil/pil-compute.c ../src/lib/pil/pil-coords.c ../src/lib/pil/pil.h ../src/lib/pil/pil-internal.h ../src/lib/pil/pil-localcursors.c ../src/lib/pil/pil-pilot.c ../src/lib/pil/pil-spread.c ../src/lib/pil/pil-test.c ../src/lib/pil/pil-testmain.c ../src/lib/pil/pil-worker.c
@@ -90,6 +90,6 @@ $(srcdir)/mod-tcpd-gdoc.texi: ../src/lib/srv/mod-tcpd/mod-tcpd-internal.h ../src
 $(srcdir)/mod-udpd-gdoc.texi: ../src/lib/srv/mod-udpd/mod-udpd-backend.c ../src/lib/srv/mod-udpd/mod-udpd-handshake.c ../src/lib/srv/mod-udpd/mod-udpd-internal.h ../src/lib/srv/mod-udpd/mod-udpd-setup.c ../src/lib/srv/mod-udpd/mod-udpd-state.c ../src/lib/srv/mod-udpd/mod-udpd-message.c ../src/lib/srv/mod-udpd/mod-udpd-oob.c ../src/lib/srv/mod-udpd/mod-udpd-info.c ../src/lib/srv/mod-udpd/mod-udpd.h
 	echo gdoc mod-udpd && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-udpd-gdoc.texi
 
-$(srcdir)/mod-httpd-gdoc.texi: ../src/lib/srv/mod-httpd/mod-httpd-oob.c ../src/lib/srv/mod-httpd/mod-httpd-internal.h ../src/lib/srv/mod-httpd/mod-httpd-backend.c ../src/lib/srv/mod-httpd/mod-httpd-info.c ../src/lib/srv/mod-httpd/mod-httpd.h ../src/lib/srv/mod-httpd/mod-httpd-message.c ../src/lib/srv/mod-httpd/mod-httpd-state.c ../src/lib/srv/mod-httpd/mod-httpd-handshake.c ../src/lib/srv/mod-httpd/mod-httpd-setup.c
+$(srcdir)/mod-httpd-gdoc.texi: ../src/lib/srv/mod-httpd/mod-httpd-oob.c ../src/lib/srv/mod-httpd/mod-httpd-internal.h ../src/lib/srv/mod-httpd/mod-httpd-request.c ../src/lib/srv/mod-httpd/mod-httpd-backend.c ../src/lib/srv/mod-httpd/mod-httpd-info.c ../src/lib/srv/mod-httpd/mod-httpd.h ../src/lib/srv/mod-httpd/mod-httpd-message.c ../src/lib/srv/mod-httpd/mod-httpd-state.c ../src/lib/srv/mod-httpd/mod-httpd-handshake.c ../src/lib/srv/mod-httpd/mod-httpd-setup.c ../src/lib/srv/mod-httpd/mod-httpd-data.c
 	echo gdoc mod-httpd && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-httpd-gdoc.texi
 
