--- a/liquidwar6/data/srv/httpd/htdocs/Makefile.am
+++ b/liquidwar6/data/srv/httpd/htdocs/Makefile.am
@@ -1,5 +1,5 @@
 # Liquid War 6 is a unique multiplayer wargame.
-# Copyright (C)  2005, 2006, 2007, 2008, 2009  Christian Mauduit <ufoot@ufoot.org>
+# Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010  Christian Mauduit <ufoot@ufoot.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-pkgdata_DATA = favicon.ico style.css gnu.jpeg gpl.txt robots.txt
-pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/data/net/htdocs
+pkgdata_DATA = index.html favicon.ico robots.txt
+pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/data/srv/httpd/htdocs
 EXTRA_DIST = $(pkgdata_DATA)
 
