--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -1076,7 +1076,7 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/nod-gdoc.texi: ../src/lib/nod/nod-constinfo.c ../src/lib/nod/nod-dyninfo.c ../src/lib/nod/nod.h ../src/lib/nod/nod-info.c ../src/lib/nod/nod-internal.h ../src/lib/nod/nod-test.c ../src/lib/nod/nod-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc nod && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/nod-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
+@LW6_GDOC_TRUE@$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-oob.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc p2p && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/p2p-gdoc.texi
 
 @LW6_GDOC_TRUE@$(srcdir)/pil-gdoc.texi: ../src/lib/pil/pil-bench.c ../src/lib/pil/pil-command.c ../src/lib/pil/pil-compute.c ../src/lib/pil/pil-coords.c ../src/lib/pil/pil.h ../src/lib/pil/pil-internal.h ../src/lib/pil/pil-localcursors.c ../src/lib/pil/pil-pilot.c ../src/lib/pil/pil-spread.c ../src/lib/pil/pil-test.c ../src/lib/pil/pil-testmain.c ../src/lib/pil/pil-worker.c
@@ -1118,7 +1118,7 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/mod-udpd-gdoc.texi: ../src/lib/srv/mod-udpd/mod-udpd-backend.c ../src/lib/srv/mod-udpd/mod-udpd-handshake.c ../src/lib/srv/mod-udpd/mod-udpd-internal.h ../src/lib/srv/mod-udpd/mod-udpd-setup.c ../src/lib/srv/mod-udpd/mod-udpd-state.c ../src/lib/srv/mod-udpd/mod-udpd-message.c ../src/lib/srv/mod-udpd/mod-udpd-oob.c ../src/lib/srv/mod-udpd/mod-udpd-info.c ../src/lib/srv/mod-udpd/mod-udpd.h
 @LW6_GDOC_TRUE@	echo gdoc mod-udpd && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-udpd-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/mod-httpd-gdoc.texi: ../src/lib/srv/mod-httpd/mod-httpd-oob.c ../src/lib/srv/mod-httpd/mod-httpd-internal.h ../src/lib/srv/mod-httpd/mod-httpd-backend.c ../src/lib/srv/mod-httpd/mod-httpd-info.c ../src/lib/srv/mod-httpd/mod-httpd.h ../src/lib/srv/mod-httpd/mod-httpd-message.c ../src/lib/srv/mod-httpd/mod-httpd-state.c ../src/lib/srv/mod-httpd/mod-httpd-handshake.c ../src/lib/srv/mod-httpd/mod-httpd-setup.c
+@LW6_GDOC_TRUE@$(srcdir)/mod-httpd-gdoc.texi: ../src/lib/srv/mod-httpd/mod-httpd-oob.c ../src/lib/srv/mod-httpd/mod-httpd-internal.h ../src/lib/srv/mod-httpd/mod-httpd-request.c ../src/lib/srv/mod-httpd/mod-httpd-backend.c ../src/lib/srv/mod-httpd/mod-httpd-info.c ../src/lib/srv/mod-httpd/mod-httpd.h ../src/lib/srv/mod-httpd/mod-httpd-message.c ../src/lib/srv/mod-httpd/mod-httpd-state.c ../src/lib/srv/mod-httpd/mod-httpd-handshake.c ../src/lib/srv/mod-httpd/mod-httpd-setup.c ../src/lib/srv/mod-httpd/mod-httpd-data.c
 @LW6_GDOC_TRUE@	echo gdoc mod-httpd && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-httpd-gdoc.texi
 
 @LW6_SELFDOC_TRUE@$(srcdir)/quick-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
