--- a/liquidwar6/doc/Makefile.gdoc
+++ b/liquidwar6/doc/Makefile.gdoc
@@ -24,6 +24,9 @@ $(srcdir)/dyn-gdoc.texi: ../src/lib/dyn/dyn-dl.c ../src/lib/dyn/dyn.h ../src/lib
 $(srcdir)/gfx-gdoc.texi: ../src/lib/gfx/gfx-api.c ../src/lib/gfx/gfx.h ../src/lib/gfx/gfx-register.c ../src/lib/gfx/gfx-test.c ../src/lib/gfx/gfx-testmain.c
 	echo gdoc gfx && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/gfx-gdoc.texi
 
+$(srcdir)/glb-gdoc.texi: ../src/lib/glb/glb-base64.c ../src/lib/glb/glb.h ../src/lib/glb/glb-internal.h ../src/lib/glb/glb-test.c ../src/lib/glb/glb-testmain.c ../src/lib/glb/lib_base64.c ../src/lib/glb/lib_base64.h
+	echo gdoc glb && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/glb-gdoc.texi
+
 $(srcdir)/gui-gdoc.texi: ../src/lib/gui/gui-button.c ../src/lib/gui/gui-coord.c ../src/lib/gui/gui.h ../src/lib/gui/gui-input.c ../src/lib/gui/gui-joystick.c ../src/lib/gui/gui-keyboard.c ../src/lib/gui/gui-keypress.c ../src/lib/gui/gui-look.c ../src/lib/gui/gui-menu.c ../src/lib/gui/gui-menuitem.c ../src/lib/gui/gui-mouse.c ../src/lib/gui/gui-smoother.c ../src/lib/gui/gui-test.c ../src/lib/gui/gui-testmain.c ../src/lib/gui/gui-videomode.c ../src/lib/gui/gui-viewport.c ../src/lib/gui/gui-zone.c
 	echo gdoc gui && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/gui-gdoc.texi
 
