--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -1037,7 +1037,7 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/cfg-gdoc.texi: ../src/lib/cfg/cfg-arg.c ../src/lib/cfg/cfg-defaults.c ../src/lib/cfg/cfg-env.c ../src/lib/cfg/cfg-format.c ../src/lib/cfg/cfg.h ../src/lib/cfg/cfg-internal.h ../src/lib/cfg/cfg-load.c ../src/lib/cfg/cfg-option.c ../src/lib/cfg/cfg-save.c ../src/lib/cfg/cfg-setup.c ../src/lib/cfg/cfg-test.c ../src/lib/cfg/cfg-testmain.c ../src/lib/cfg/cfg-unified.c ../src/lib/cfg/cfg-xml.c
 @LW6_GDOC_TRUE@	echo gdoc cfg && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/cfg-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/cli-gdoc.texi: ../src/lib/cli/cli-api.c ../src/lib/cli/cli.h ../src/lib/cli/cli-register.c ../src/lib/cli/cli-test.c ../src/lib/cli/cli-testmain.c
+@LW6_GDOC_TRUE@$(srcdir)/cli-gdoc.texi: ../src/lib/cli/cli-api.c ../src/lib/cli/cli.h ../src/lib/cli/cli-oob.c ../src/lib/cli/cli-register.c ../src/lib/cli/cli-test.c ../src/lib/cli/cli-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc cli && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/cli-gdoc.texi
 
 @LW6_GDOC_TRUE@$(srcdir)/cns-gdoc.texi: ../src/lib/cns/cns.h ../src/lib/cns/cns-handler.c ../src/lib/cns/cns-history.c ../src/lib/cns/cns-support.c ../src/lib/cns/cns-test.c ../src/lib/cns/cns-testmain.c
@@ -1079,7 +1079,7 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/nod-gdoc.texi: ../src/lib/nod/nod-constinfo.c ../src/lib/nod/nod-dyninfo.c ../src/lib/nod/nod.h ../src/lib/nod/nod-info.c ../src/lib/nod/nod-internal.h ../src/lib/nod/nod-test.c ../src/lib/nod/nod-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc nod && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/nod-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p-flush.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-oob.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
+@LW6_GDOC_TRUE@$(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-clioob.c ../src/lib/p2p/p2p-data.c ../src/lib/p2p/p2p-db.c ../src/lib/p2p/p2p-explore.c ../src/lib/p2p/p2p-flush.c ../src/lib/p2p/p2p.h ../src/lib/p2p/p2p-internal.h ../src/lib/p2p/p2p-node.c ../src/lib/p2p/p2p-srvoob.c ../src/lib/p2p/p2p-test.c ../src/lib/p2p/p2p-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc p2p && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/p2p-gdoc.texi
 
 @LW6_GDOC_TRUE@$(srcdir)/pil-gdoc.texi: ../src/lib/pil/pil-bench.c ../src/lib/pil/pil-command.c ../src/lib/pil/pil-compute.c ../src/lib/pil/pil-coords.c ../src/lib/pil/pil.h ../src/lib/pil/pil-internal.h ../src/lib/pil/pil-localcursors.c ../src/lib/pil/pil-pilot.c ../src/lib/pil/pil-spread.c ../src/lib/pil/pil-test.c ../src/lib/pil/pil-testmain.c ../src/lib/pil/pil-worker.c
@@ -1106,13 +1106,13 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/mod-ogg-gdoc.texi: ../src/lib/snd/mod-ogg/mod-ogg-sound.c ../src/lib/snd/mod-ogg/mod-ogg-music.c ../src/lib/snd/mod-ogg/mod-ogg-repr.c ../src/lib/snd/mod-ogg/mod-ogg-setup.c ../src/lib/snd/mod-ogg/mod-ogg.h ../src/lib/snd/mod-ogg/mod-ogg-volume.c ../src/lib/snd/mod-ogg/mod-ogg-backend.c ../src/lib/snd/mod-ogg/mod-ogg-const.c ../src/lib/snd/mod-ogg/mod-ogg-internal.h ../src/lib/snd/mod-ogg/mod-ogg-path.c
 @LW6_GDOC_TRUE@	echo gdoc mod-ogg && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-ogg-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/mod-tcp-gdoc.texi: ../src/lib/cli/mod-tcp/mod-tcp-setup.c ../src/lib/cli/mod-tcp/mod-tcp-handshake.c ../src/lib/cli/mod-tcp/mod-tcp-internal.h ../src/lib/cli/mod-tcp/mod-tcp-state.c ../src/lib/cli/mod-tcp/mod-tcp-backend.c ../src/lib/cli/mod-tcp/mod-tcp.h ../src/lib/cli/mod-tcp/mod-tcp-info.c ../src/lib/cli/mod-tcp/mod-tcp-message.c
+@LW6_GDOC_TRUE@$(srcdir)/mod-tcp-gdoc.texi: ../src/lib/cli/mod-tcp/mod-tcp-setup.c ../src/lib/cli/mod-tcp/mod-tcp-handshake.c ../src/lib/cli/mod-tcp/mod-tcp-internal.h ../src/lib/cli/mod-tcp/mod-tcp-state.c ../src/lib/cli/mod-tcp/mod-tcp-oob.c ../src/lib/cli/mod-tcp/mod-tcp-backend.c ../src/lib/cli/mod-tcp/mod-tcp.h ../src/lib/cli/mod-tcp/mod-tcp-info.c ../src/lib/cli/mod-tcp/mod-tcp-message.c
 @LW6_GDOC_TRUE@	echo gdoc mod-tcp && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-tcp-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/mod-udp-gdoc.texi: ../src/lib/cli/mod-udp/mod-udp.h ../src/lib/cli/mod-udp/mod-udp-setup.c ../src/lib/cli/mod-udp/mod-udp-handshake.c ../src/lib/cli/mod-udp/mod-udp-backend.c ../src/lib/cli/mod-udp/mod-udp-internal.h ../src/lib/cli/mod-udp/mod-udp-message.c ../src/lib/cli/mod-udp/mod-udp-info.c ../src/lib/cli/mod-udp/mod-udp-state.c
+@LW6_GDOC_TRUE@$(srcdir)/mod-udp-gdoc.texi: ../src/lib/cli/mod-udp/mod-udp.h ../src/lib/cli/mod-udp/mod-udp-setup.c ../src/lib/cli/mod-udp/mod-udp-oob.c ../src/lib/cli/mod-udp/mod-udp-handshake.c ../src/lib/cli/mod-udp/mod-udp-backend.c ../src/lib/cli/mod-udp/mod-udp-internal.h ../src/lib/cli/mod-udp/mod-udp-message.c ../src/lib/cli/mod-udp/mod-udp-info.c ../src/lib/cli/mod-udp/mod-udp-state.c
 @LW6_GDOC_TRUE@	echo gdoc mod-udp && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-udp-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/mod-http-gdoc.texi: ../src/lib/cli/mod-http/mod-http-handshake.c ../src/lib/cli/mod-http/mod-http-info.c ../src/lib/cli/mod-http/mod-http-setup.c ../src/lib/cli/mod-http/mod-http-backend.c ../src/lib/cli/mod-http/mod-http-internal.h ../src/lib/cli/mod-http/mod-http-message.c ../src/lib/cli/mod-http/mod-http-state.c ../src/lib/cli/mod-http/mod-http.h
+@LW6_GDOC_TRUE@$(srcdir)/mod-http-gdoc.texi: ../src/lib/cli/mod-http/mod-http-handshake.c ../src/lib/cli/mod-http/mod-http-info.c ../src/lib/cli/mod-http/mod-http-setup.c ../src/lib/cli/mod-http/mod-http-backend.c ../src/lib/cli/mod-http/mod-http-internal.h ../src/lib/cli/mod-http/mod-http-oob.c ../src/lib/cli/mod-http/mod-http-message.c ../src/lib/cli/mod-http/mod-http-state.c ../src/lib/cli/mod-http/mod-http.h
 @LW6_GDOC_TRUE@	echo gdoc mod-http && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-http-gdoc.texi
 
 @LW6_GDOC_TRUE@$(srcdir)/mod-tcpd-gdoc.texi: ../src/lib/srv/mod-tcpd/mod-tcpd-internal.h ../src/lib/srv/mod-tcpd/mod-tcpd-handshake.c ../src/lib/srv/mod-tcpd/mod-tcpd-backend.c ../src/lib/srv/mod-tcpd/mod-tcpd-message.c ../src/lib/srv/mod-tcpd/mod-tcpd-setup.c ../src/lib/srv/mod-tcpd/mod-tcpd.h ../src/lib/srv/mod-tcpd/mod-tcpd-info.c ../src/lib/srv/mod-tcpd/mod-tcpd-oob.c ../src/lib/srv/mod-tcpd/mod-tcpd-state.c
